2003-10-17  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.0)

        * IO/VOTable.pm: Very simple VOTable reader added, should
          now get at least basic information into the Astro::Catalog
          object if it is passed a VOTable.
          
        * t/2_votable.t: Added test harness for reading VOTables.  
          
2003-10-16  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.4.0)

        * IO/VOTable.pm: Fixed VOTable output to actually have some
          meta-data, now readable by treeview. Added DEFINITIONS
          element to the table and filled in various "default"
          meta-data. The tables are not bogus, but the epoch and
          equinoxes may be incorrect in some cases (SuperCOSMOS
          catalogues for instance).
          
2003-10-13  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.3.0)

        * Added VOTable support (write only) as a pluggable IO module
          along with associated test harness.
          
2003-09-30  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/Sesame.pm: Modified to cope with change in return
          format by CDS. 
                  
2003-09-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/SIMBAD.pm: Removed debugging statements which 
          generated a file containing a copy of the retrieved HTML in 
          the current working directory.
               
        * etc/sss.cfg: Added SkyCat SuperCOSMOS configuration file to 
          default distribution
        
        * etc/skycat.cfg: Added generic SkyCat configuration file to 
          default distribution   

        * Query/Query/SkyCat.pm: Updated to look for $PERLPREFIX/etc/skycat.cfg
          configuration file by default.
               
        * Makefile.PL: Modified makefile to install the SkyCat configuration
          files to $(PERLPREFIX)/etc in preperation for shifting access to
          SuperCOSMOS from being dependant on Astro::Aladin to using the
          Astro::Catalog::Query::SkyCat module. 